# DARTH-GAIN

./: .coverage  .gitignore  Dockerfile  README.md  SCHEDULING.md  docker-compose.yml  pyproject.toml
.atl/: skill-registry.md
.engram/: verify-report-ingest-pipeline.md
openspec/: config.yaml
openspec/changes/ingest-pipeline/: proposal.md  tasks.md
openspec/changes/progression-engine/: design.md  exploration.md  proposal.md  tasks.md  verify-report-pr-a.md
openspec/changes/routine-view/: tasks.md
openspec/changes/web-dashboard/: design.md  proposal.md  tasks.md
openspec/specs/progression-cli/: spec.md
openspec/specs/progression-config/: spec.md
openspec/specs/progression-engine/: spec.md
openspec/specs/routine-view/: spec.md
openspec/specs/scheduling/: spec.md
openspec/specs/web-auth/: spec.md
openspec/specs/web-dashboard/: spec.md
openspec/specs/web-exercise-detail/: spec.md
scripts/: cron-sync-all.py  install-cron.sh  migrate-to-multi-user.py
src/darth_gain/: __init__.py  cli.py  config.py
src/darth_gain/db/: __init__.py  engine.py  repo.py
src/darth_gain/hevy/: __init__.py  client.py  (+1 more)
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_db_engine.py  test_db_repo.py  test_docker.py  test_hevy_client.py  test_hevy_sync.py  test_integration.py  test_multi_user.py  test_progression_cli.py  test_progression_engine.py  test_progression_models.py  test_progression_repo.py  test_routines.py  test_web_app.py  test_web_auth.py  test_web_dashboard.py  test_web_exercises.py  test_web_routines.py
tests/fixtures/: events_page.json  templates_page.json
(+31 files in other folders)
