[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darth-gain"
version = "0.1.0"
description = "Automate your Hevy workout progression for hypertrophy gains"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Darth-ATA" },
]
requires-python = ">=3.11"
dependencies = [
  "hevy-api-wrapper>=1.0.0",
  "click>=8.0",
  "rich>=13.0",
  "platformdirs>=4.0",
]

[project.scripts]
darth-gain = "darth_gain.cli:cli"

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.0.0",
    "werkzeug>=3.0.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/darth_gain"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
